--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,8 @@
 <resources>
 
     <string name="app_name">Sunshine</string>
-    <string name="hello_world">Today June 24 !</string>
-    <string name="temp_day">25 C </string>
-    <string name="temp_night">8 C </string>
     <string name="action_settings">Settings</string>
+    <string name="action_refresh" translatable="false">Refresh</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
